Centered DIV's and changed CSS a bit to PRACTICE

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div id="headerWrapper">
     <header>
         <h1>Welkom</h1>
         <p>
@@ -14,6 +15,7 @@
             JavaScript.
         </p>
     </header>
+    </div>
     <main>
         <section>
             <h2>Wat gaan we leren?</h2>
